@@ -3,6 +3,12 @@ if systemd_user_unit_dir == ''
   systemd_user_unit_dir = join_paths(get_option('prefix'), 'lib', 'systemd', 'user')
 endif
 
+# copy the system socket unit to the "user" directory
+install_data(
+  join_paths('..', 'system', 'mpd.socket'),
+  install_dir: systemd_user_unit_dir,
+)
+
 configure_file(
   input: 'mpd.service.in',
   output: 'mpd.service',
